[TR] fix example

--- a/Optimization/Trust-region/test constraints theory.ipynb
+++ b/Optimization/Trust-region/test constraints theory.ipynb
@@ -24,8 +24,8 @@
     "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]]).T + np.array([[2.2], [2.2]])\n",
     "INPUT_SYMBOL = ca.SX.sym('x', dataset.shape[0])\n",
     "\n",
-    "poly_mf = LagrangePolynomials(pdegree=2, input_symbols=INPUT_SYMBOL)\n",
-    "poly_mceq = LagrangePolynomials(pdegree=2, input_symbols=INPUT_SYMBOL)\n",
+    "poly_mf = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
+    "poly_mceq = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
     "mf = []\n",
     "mceq = []\n",
     "for i in range(dataset.shape[1]):\n",
@@ -114,6 +114,14 @@
     "plt.savefig(f\"./plots/OF.png\")\n",
     "plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c5d9ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
