--- a/Optimization/Trust-region/TrustRegionConstraint.ipynb
+++ b/Optimization/Trust-region/TrustRegionConstraint.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from src.trust_region_sqp import TrustRegionSQPFilter\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
@@ -33,7 +33,8 @@
     "constants[\"kappa_mu\"] = 100\n",
     "constants[\"kappa_tmd\"] = 0.01\n",
     "\n",
-    "constants[\"init_radius\"] = 10.\n",
+    "constants[\"init_radius\"] = 1.\n",
+    "constants[\"L_threshold\"] = 1.2\n",
     "\n",
     "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[2.1], [2.2]], dtype=np.float32)\n",
     "\n",
@@ -52,7 +53,7 @@
    "execution_count": null,
    "id": "e8180041",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -82,23 +83,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tr.trqp.sol"
+    "tr.filter_SQP.filters\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3433fc4",
+   "id": "bb5a72bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tr.trqp.solver.stats()"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "x = [i[0] for i in tr.filter_SQP.filters]\n",
+    "y = [i[1] for i in tr.filter_SQP.filters]\n",
+    "plt.figure()\n",
+    "plt.scatter(x[1:], y[1:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79ac98fc",
+   "id": "d72eca53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr.iterates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8787e23c",
    "metadata": {},
    "outputs": [],
    "source": []
