[TR] Change parameters in notebook

--- a/Optimization/Trust-region/TrustRegionConstraint.ipynb
+++ b/Optimization/Trust-region/TrustRegionConstraint.ipynb
@@ -41,9 +41,9 @@
     "constants[\"stopping_radius\"] = 1E-5\n",
     "constants[\"L_threshold\"] = 1.2\n",
     "\n",
-    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-0.4], [0.2]], dtype=np.float32)\n",
+    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-0.4], [0.2]], dtype=np.float32)\n",
     "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[3.8], [5.2]], dtype=np.float32)\n",
-    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [-0.2]], dtype=np.float32)\n",
+    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [-3.2]], dtype=np.float32)\n",
     "\n",
     "# def cf(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
     "#     return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
@@ -143,65 +143,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "x = [i[0] for i in tr.filter_SQP.filters]\n",
     "y = [i[1] for i in tr.filter_SQP.filters]\n",
     "plt.figure()\n",
     "plt.scatter(x, y)\n",
     "plt.ylabel(\"vartheta_k\")\n",
-    "plt.xlabel(\"f_k\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d72eca53",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "tr.iterates[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a59ff3ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tr.filter_SQP.filters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd856f18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [True, False, True, True]\n",
-    "b = [1, 2, 3, 4]\n",
-    "c = [-10, -20, -15, 10]\n",
-    "\n",
-    "t = list(zip(a, b, c))\n",
-    "\n",
-    "t.sort(key=lambda x:(x[0], x[2]), reverse=True)\n",
-    "\n",
-    "t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae852506",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ca.fmax(1, ca.fabs(-2))"
+    "plt.xlabel(\"f_k\")"
    ]
   }
  ],
