[TR] more examples

--- a/Optimization/Trust-region/TrustRegionConstraint_Nonlinear.ipynb
+++ b/Optimization/Trust-region/TrustRegionConstraint_Nonlinear.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "constants = dict()\n",
     "constants[\"gamma_0\"] = 0.5\n",
-    "constants[\"gamma_1\"] = 0.8\n",
+    "constants[\"gamma_1\"] = 0.9\n",
     "constants[\"gamma_2\"] = 1.2\n",
     "constants[\"eta_1\"] = 1E-4 \n",
     "constants[\"eta_2\"] = 0.5\n",
@@ -37,12 +37,12 @@
     "constants[\"kappa_mu\"] = 100\n",
     "constants[\"kappa_tmd\"] = 0.01\n",
     "\n",
-    "constants[\"init_radius\"] = 1.\n",
+    "constants[\"init_radius\"] = 2.\n",
     "constants[\"stopping_radius\"] = 1E-5\n",
-    "constants[\"L_threshold\"] = 1.2\n",
+    "constants[\"L_threshold\"] = 2.0\n",
     "\n",
-    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [3.2]], dtype=np.float32)\n",
-    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[3.8], [5.2]], dtype=np.float32)\n",
+    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[1.2], [3.2]], dtype=np.float32)\n",
+    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[3.8], [5.2]], dtype=np.float32)\n",
     "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [-3.2]], dtype=np.float32)\n",
     "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[1.2], [-3.2]], dtype=np.float32)\n",
     "\n",
@@ -53,11 +53,22 @@
     "    return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
     "\n",
     "def eq_constraint(x:np.ndarray) -> np.ndarray: # equality constraints\n",
-    "    return x[1] - x[0]\n",
-    "#     return np.array([0.0])\n",
+    "    return x[1]**2 - x[0]\n",
     "\n",
     "def ineq_constraint(x:np.ndarray) -> np.ndarray: # inequality constraints\n",
-    "    return x[1] + x[0] - 2"
+    "    return x[1]**2 + x[0] - 2\n",
+    "\n",
+    "xmin = -3 \n",
+    "xmax = 3\n",
+    "ymin = -3\n",
+    "ymax = 3\n",
+    "N = 100\n",
+    "\n",
+    "yeq_plot = np.linspace(-3, 3, N)\n",
+    "xeq_plot = np.array([i**2 for i in list(yeq_plot)])\n",
+    "\n",
+    "yineq_plot = np.linspace(-3, 3, N)\n",
+    "xineq_plot = np.array([2 - i**2 for i in list(yineq_plot)])"
    ]
   },
   {
@@ -75,7 +86,7 @@
     "                          eqcs = [eq_constraint], \n",
     "                          ineqcs = [ineq_constraint])\n",
     "\n",
-    "tr.run(max_iter=25)"
+    "tr.run(max_iter=20)"
    ]
   },
   {
@@ -99,8 +110,11 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LogNorm\n",
-    "X, Y = np.meshgrid(np.linspace(-3, 3, 100),\n",
-    "                    np.linspace(-3, 3, 100))\n",
+    "\n",
+    "\n",
+    "\n",
+    "X, Y = np.meshgrid(np.linspace(xmin, xmax, 100),\n",
+    "                    np.linspace(ymin, ymax, 100))\n",
     "levels = [0.0001, 0.0005, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50]\n",
     "\n",
     "for i in range(len(tr.iterates)):\n",
@@ -131,10 +145,26 @@
     "    y = tr.iterates[i]['Y'][1,:]\n",
     "    plt.scatter(x, y, label=f\"iteration {i}\")\n",
     "    plt.scatter(x[0], y[0], label=f'Best point')\n",
-    "    plt.plot([-3,3], [-3,3], 'b-', label=f\"eq constraint\")\n",
-    "    plt.plot([-3,3], [5,-1], 'r--', label=f\"ineq constraint\")\n",
+    "    \n",
+    "    #Eq constraint    \n",
+    "    plt.plot(xeq_plot, yeq_plot, 'b-', label=f\"eq constraint\")\n",
+    "    \n",
+    "    # Ineq constraint\n",
+    "    plt.plot(xineq_plot, yineq_plot, 'r--', label=f\"ineq constraint\")\n",
     "    plt.legend()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29b0a817",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "ca.simplify(tr.iterates[0]['models'].m_eqcs.models[0].model.model_polynomial.symbol)"
    ]
   },
   {
@@ -150,6 +180,28 @@
     "plt.scatter(x, y)\n",
     "plt.ylabel(\"vartheta_k\")\n",
     "plt.xlabel(\"f_k\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dddf9e4d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "%debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ee5198",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr.filter_SQP.filters"
    ]
   }
  ],
