[TR] add nice plotting

--- a/Optimization/Trust-region/TrustRegionUnconstrained.ipynb
+++ b/Optimization/Trust-region/TrustRegionUnconstrained.ipynb
@@ -24,36 +24,79 @@
     "import numpy as np\n",
     "import casadi as ca\n",
     "\n",
-    "def myfunc(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
-    "    return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
-    "# def myfunc(x:np.ndarray) -> np.ndarray:\n",
-    "#     return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
+    "# def myfunc(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
+    "#     return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
+    "def myfunc(x:np.ndarray) -> np.ndarray:    \n",
+    "    return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
     "\n",
+    "tr_list = []\n",
+    "initial_centers = [np.array([[2.2], [2.12]]), \n",
+    "                np.array([[-2.2], [-2.12]]),\n",
+    "                np.array([[-2.2], [2.12]]),\n",
+    "                np.array([[2.2], [-2.12]])]\n",
     "\n",
-    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]]).T + np.array([[2.2], [2.21]])\n",
-    "INPUT_SYMBOL = ca.SX.sym('x', dataset.shape[0])\n",
+    "for center in initial_centers:\n",
+    "    dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0], [0.0, -1.0]]).T + center\n",
+    "    INPUT_SYMBOL = ca.SX.sym('x', dataset.shape[0])\n",
     "\n",
-    "poly_mf = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
-    "poly_mceq = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
-    "mf = []\n",
-    "for i in range(dataset.shape[1]):\n",
-    "    x = dataset[:, i]\n",
-    "    mf.append(myfunc(x))\n",
-    "mf = np.array(mf)\n",
-    "poly_mf.initialize(v=dataset, f=mf)\n",
+    "    poly_mf = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
+    "    poly_mceq = LagrangePolynomials(input_symbols=INPUT_SYMBOL, pdegree=2)\n",
+    "    mf = []\n",
+    "    for i in range(dataset.shape[1]):\n",
+    "        x = dataset[:, i]\n",
+    "        mf.append(myfunc(x))\n",
+    "    mf = np.array(mf)\n",
+    "    \n",
+    "    sort_ind = mf.argsort(axis=0)  \n",
+    "    dataset = dataset[:, sort_ind]\n",
+    "    mf = mf[sort_ind]\n",
     "\n",
-    "tr = TrustRegion(input_symbols=INPUT_SYMBOL, dataset=dataset, results=mf, func=myfunc)\n",
-    "tr.run(max_radius=1.5, max_iter=30, rad_tol=1E-5)"
+    "    tr = TrustRegion(input_symbols=INPUT_SYMBOL, dataset=dataset, results=mf, func=myfunc)\n",
+    "    tr.run(max_radius=1.5, max_iter=30, rad_tol=1E-8)\n",
+    "    \n",
+    "    tr_list.append(tr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f131ca",
+   "id": "12c87bcd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%debug"
+    "fsize = 15\n",
+    "tsize = 18\n",
+    "tdir = 'in'\n",
+    "major = 5.0\n",
+    "minor = 3.0\n",
+    "\n",
+    "style = 'default'\n",
+    "\n",
+    "plt.style.use(style)\n",
+    "plt.rcParams['text.usetex'] = True\n",
+    "plt.rcParams['font.size'] = fsize\n",
+    "plt.rcParams['legend.fontsize'] = tsize\n",
+    "plt.rcParams['xtick.direction'] = tdir\n",
+    "plt.rcParams['ytick.direction'] = tdir\n",
+    "plt.rcParams['xtick.major.size'] = major\n",
+    "plt.rcParams['xtick.minor.size'] = minor\n",
+    "plt.rcParams['ytick.major.size'] = major\n",
+    "plt.rcParams['ytick.minor.size'] = minor\n",
+    "\n",
+    "fig, ax = plt.subplots(1)\n",
+    "for i, tr in enumerate(tr_list):\n",
+    "    ## Plot of objective function\n",
+    "    ax.plot(range(len(tr.list_of_OF)), tr.list_of_OF, label=f\"dataset-{i+1}\", linestyle='dashed')\n",
+    "    try:\n",
+    "        ax.set_yscale(\"log\")\n",
+    "    except:\n",
+    "        ax.set_yscale(\"linear\")\n",
+    "    ax.set_xlabel(f\"Number of iterations\")\n",
+    "    ax.set_ylabel(f\"OF value\")\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.savefig(f\"./plots/score_OF_all.png\")\n",
+    "plt.close()"
    ]
   },
   {
@@ -64,14 +107,17 @@
    "outputs": [],
    "source": [
     "from matplotlib.colors import LogNorm\n",
+    "from matplotlib import ticker, cm\n",
     "from casadi import *\n",
     "import glob\n",
     "\n",
-    "x, y = np.meshgrid(np.linspace(-4, 6, 100),\n",
-    "                    np.linspace(-4, 6, 100))\n",
+    "x, y = np.meshgrid(np.linspace(-4, 4, 100),\n",
+    "                    np.linspace(-4, 4, 100))\n",
     "    \n",
     "# levels = list(np.arange(0, 5, 1))\n",
-    "levels = [0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10]\n",
+    "# levels = [0.01, 0.05, 0.1, 0.5, 1, 5, 10]\n",
+    "# levels = [0.0001, 0.0005, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50]\n",
+    "levels = [10**i for i in np.arange(-1,2.5,0.2)]\n",
     "\n",
     "old_center = [0,0]\n",
     "old_radius = 0\n",
@@ -79,6 +125,7 @@
     "files = glob.glob('./plots/*')\n",
     "for f in files:\n",
     "    os.remove(f)\n",
+    "tr = tr_list[0]\n",
     "        \n",
     "for i, m in enumerate(tr.list_of_models):\n",
     "    if i % 1 == 0:\n",
@@ -90,9 +137,10 @@
     "        intindices = dist <= radius\n",
     "\n",
     "        fig, ax = plt.subplots(1)\n",
-    "        ax.set_title(f\"{tr.list_of_status[i]['criticality_step']} \\n {tr.list_of_status[i]['acceptance']}\")\n",
+    "#         ax.set_title(f\"{tr.list_of_status[i]['criticality_step']} \\n {tr.list_of_status[i]['acceptance']}\")\n",
+    "        ax.set_xlabel(f\"$x_1$\")\n",
+    "        ax.set_ylabel(f\"$x_2$\")\n",
     "        func = myfunc([x, y])\n",
-    "        # func[intindices] = m.model_polynomial.feval(x, y)[intindices]\n",
     "        func_map = m.model_polynomial.feval.map(x.shape[0]*x.shape[1])\n",
     "        x_dm = DM(x).reshape((1, x.shape[0]*x.shape[1]))\n",
     "        y_dm = DM(y).reshape((1, x.shape[0]*x.shape[1]))\n",
@@ -104,12 +152,12 @@
     "        \n",
     "        circle1 = plt.Circle(center, radius, color='black', fill=False)\n",
     "        circle2 = plt.Circle(old_center, old_radius, color='red', fill=False)\n",
-    "        ax.contour(x, y, func, levels, norm = LogNorm())\n",
+    "        CS = ax.contour(x, y, func, levels, norm = LogNorm(), cmap=cm.PuBu_r, locator=ticker.LogLocator())\n",
+    "        ax.clabel(CS, fontsize=9, inline=True)\n",
     "        ax.add_patch(circle1)\n",
     "        ax.add_patch(circle2)\n",
-    "        ax.contour(x, y, func, levels)\n",
-    "        plt.scatter(m.y[0, :], m.y[1, :], label=f'iteration_{i}')\n",
-    "        plt.scatter(m.y[0, 0], m.y[1, 0], label=f'Best point')\n",
+    "        plt.scatter(m.y[0, :], m.y[1, :], color='black', label=f'iteration_{i}')\n",
+    "        plt.scatter(m.y[0, 0], m.y[1, 0], color='red', label=f'Best point')\n",
     "        plt.legend()\n",
     "        plt.savefig(f\"./plots/TR_plots_{i}.png\")\n",
     "        plt.close()\n",
@@ -129,39 +177,7 @@
     "\n",
     "plt.legend()\n",
     "plt.savefig(f\"./plots/score_OF.png\")\n",
-    "plt.close()\n",
-    "\n",
-    "eq_val = []\n",
-    "## Plot of constraint violation\n",
-    "for i in range(len(tr.list_of_OF)):\n",
-    "    x = tr.list_of_models[i].y\n",
-    "    eq_val.append(np.min(np.abs(eq_constraint(x))))\n",
-    "    \n",
-    "fig, ax = plt.subplots(1)\n",
-    "ax.set_title(f\"Min constraint vs Iterations\")\n",
-    "ax.scatter(range(len(tr.list_of_OF)), eq_val, color=\"black\", label=\"OF\")\n",
-    "try:\n",
-    "    ax.set_yscale(\"log\")\n",
-    "except:\n",
-    "    ax.set_yscale(\"linear\")\n",
-    "\n",
-    "plt.legend()\n",
-    "plt.savefig(f\"./plots/score_violation.png\")\n",
     "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98cc1b97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import casadi as ca\n",
-    "\n",
-    "a = np.array([1,2])\n",
-    "DM(a)"
    ]
   }
  ],
