--- a/Optimization/Trust-region/TrustRegionConstraint.ipynb
+++ b/Optimization/Trust-region/TrustRegionConstraint.ipynb
@@ -19,73 +19,206 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab47ddff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Constants\n",
-    "\n",
-    "constants = dict()\n",
-    "constants[\"gamma_0\"] = 0.5\n",
-    "constants[\"gamma_1\"] = 0.8\n",
-    "constants[\"gamma_2\"] = 1.2\n",
-    "constants[\"eta_1\"] = 1E-4 \n",
-    "constants[\"eta_2\"] = 0.5\n",
-    "constants[\"mu\"] = 0.01\n",
-    "constants[\"gamma_vartheta\"] = 1E-8 #1E-4 \n",
-    "constants[\"kappa_vartheta\"] = 1E-4\n",
-    "constants[\"kappa_radius\"] = 0.7\n",
-    "constants[\"kappa_mu\"] = 100\n",
-    "constants[\"kappa_tmd\"] = 0.01\n",
-    "\n",
-    "constants[\"init_radius\"] = 1.\n",
-    "constants[\"stopping_radius\"] = 1E-5\n",
-    "constants[\"L_threshold\"] = 1.2\n",
-    "\n",
-    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [3.2]], dtype=np.float32)\n",
-    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[3.8], [5.2]], dtype=np.float32)\n",
-    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[-1.2], [-3.2]], dtype=np.float32)\n",
-    "# dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[1.2], [-3.2]], dtype=np.float32)\n",
-    "\n",
-    "# def cf(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
-    "#     return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
-    "\n",
-    "def cf(x:np.ndarray) -> np.ndarray:\n",
-    "    return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
-    "\n",
-    "def eq_constraint(x:np.ndarray) -> np.ndarray: # equality constraints\n",
-    "    return x[1] - x[0]\n",
-    "#     return np.array([0.0])\n",
-    "\n",
-    "def ineq_constraint(x:np.ndarray) -> np.ndarray: # inequality constraints\n",
-    "    return x[1] + x[0] - 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8180041",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "tr = TrustRegionSQPFilter(constants = constants, \n",
+    "## Constants\n",
+    "\n",
+    "constants = dict()\n",
+    "constants[\"gamma_0\"] = 0.2\n",
+    "constants[\"gamma_1\"] = 0.7\n",
+    "constants[\"gamma_2\"] = 1.2 #1.5 Eq\n",
+    "constants[\"eta_1\"] = 0.1\n",
+    "constants[\"eta_2\"] = 0.4\n",
+    "constants[\"mu\"] = 0.01\n",
+    "constants[\"gamma_vartheta\"] = 1E-8 #1E-4 \n",
+    "constants[\"kappa_vartheta\"] = 1E-4\n",
+    "constants[\"kappa_radius\"] = 0.8\n",
+    "constants[\"kappa_mu\"] = 10\n",
+    "constants[\"kappa_tmd\"] = 0.01\n",
+    "\n",
+    "constants[\"init_radius\"] = 1.\n",
+    "constants[\"stopping_radius\"] = 1E-3\n",
+    "constants[\"L_threshold\"] = 1.2\n",
+    "\n",
+    "dataset = np.array([[0.0, 0.0], [1.0, 0.0], [0.0, 1.0], [-1.0, 0.0], [1.0, 1.0]], dtype=np.float32).T + np.array([[2.1], [-2.12]], dtype=np.float32) \n",
+    "\n",
+    "tr_list = []\n",
+    "\n",
+    "for c1, c2, name in [(0.0,np.nan,'PQ-E1'), (1.0,np.nan,'PQ-E2'), (-1.0,np.nan,'PQ-E3'), \n",
+    "                     (np.nan,0.0,'PQ-I1'), (np.nan,1,'PQ-I2'), (np.nan,-1.0,'PQ-I3'), \n",
+    "                     (0.0,0.0,'PQ-IE1'), (1.0,1.0,'PQ-IE2'), (-1.0,-1.0,'PQ-IE3'),\n",
+    "                     (0.0,0.0,'PQ-IE-N1'), (1.0,1.0,'PQ-IE-N2'), (-1.0,-1.0,'PQ-IE-N3'),\n",
+    "                     (0.0,np.nan,'RB-E1'), (1.0,np.nan,'RB-E2'), (-1.0,np.nan,'RB-E3'), \n",
+    "                     (np.nan,0.0,'RB-I1'), (np.nan,1,'RB-I2'), (np.nan,-1.0,'RB-I3'), \n",
+    "                     (0.0,0.0,'RB-IE1'), (1.0,1.0,'RB-IE2'), (-1.0,-1.0,'RB-IE3'),\n",
+    "                     (0.0,0.0,'RB-IE-N1'), (1.0,1.0,'RB-IE-N2'), (-1.0,-1.0,'RB-IE-N3')]:\n",
+    "# for c1, c2, name in [(np.nan,-1,'PQ-I3')]:\n",
+    "    tr_dict = dict()\n",
+    "    xeq_plot_list = []\n",
+    "    yeq_plot_list = []\n",
+    "    xineq_plot_list = []\n",
+    "    yineq_plot_list = []\n",
+    "#     def cf(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
+    "#         return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
+    "\n",
+    "    if 'N' in name:\n",
+    "        \n",
+    "        if 'RB' in name:\n",
+    "            def cf(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
+    "                return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
+    "        elif 'PQ' in name:\n",
+    "            def cf(x:np.ndarray) -> np.ndarray:\n",
+    "                return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
+    "\n",
+    "    #     def cf(x:np.ndarray) -> np.ndarray:\n",
+    "    #         return 10*(x[0]**2) + 2*(x[1]**2) + 4*x[0]*x[1]\n",
+    "\n",
+    "        def eq_constraint(x:np.ndarray) -> np.ndarray: # equality constraints\n",
+    "            return x[1]**2 - x[0] + c1\n",
+    "\n",
+    "        def ineq_constraint(x:np.ndarray) -> np.ndarray: # inequality constraints\n",
+    "            return x[1]**2 + x[0] + c2\n",
+    "        \n",
+    "        xmin = -3 \n",
+    "        xmax = 3\n",
+    "        ymin = -3\n",
+    "        ymax = 3\n",
+    "        N = 100\n",
+    "\n",
+    "        # Equality\n",
+    "        yeq_plot = []\n",
+    "        xeq_plot = []\n",
+    "        for y in list(np.linspace(-3,3,N)):\n",
+    "            x = y**2 + c1 # change this\n",
+    "            if x <= xmax and x >= xmin:\n",
+    "                xeq_plot.append(x)\n",
+    "                yeq_plot.append(y)\n",
+    "        yeq_plot = np.array(yeq_plot)\n",
+    "        xeq_plot = np.array(xeq_plot)\n",
+    "\n",
+    "        yeq_plot_list.append(yeq_plot)\n",
+    "        xeq_plot_list.append(xeq_plot)\n",
+    "\n",
+    "        # Inequality\n",
+    "        yineq_plot = []\n",
+    "        xineq_plot = []\n",
+    "        for y in list(np.linspace(-3,3,N)):\n",
+    "            x = -y**2 - c2 # change this\n",
+    "            if x <= xmax and x >= xmin:\n",
+    "                xineq_plot.append(x)\n",
+    "                yineq_plot.append(y)\n",
+    "        yineq_plot = np.array(yineq_plot)\n",
+    "        xineq_plot = np.array(xineq_plot)\n",
+    "\n",
+    "        yineq_plot_list.append(yineq_plot)\n",
+    "        xineq_plot_list.append(xineq_plot)\n",
+    "    \n",
+    "    else:\n",
+    "        if 'RB' in name:\n",
+    "            def cf(x:np.ndarray) -> np.ndarray: # Rosenbrock function: OF\n",
+    "                return 1*(x[1]-x[0]**2)**2+((x[0]-1)**2)/100\n",
+    "        elif 'PQ' in name:\n",
+    "            def cf(x:np.ndarray) -> np.ndarray:\n",
+    "                return 10*(x[0]**2)*(1 + 0.75*np.cos(70*x[0])/12) + np.cos(100*x[0])**2/24 + 2*(x[1]**2)*(1 + 0.75*np.cos(70*x[1])/12) + np.cos(100*x[1])**2/24 + 4*x[0]*x[1]\n",
+    "        \n",
+    "    #     def cf(x:np.ndarray) -> np.ndarray:\n",
+    "    #         return 10*(x[0]**2) + 2*(x[1]**2) + 4*x[0]*x[1]\n",
+    "\n",
+    "        def eq_constraint(x:np.ndarray) -> np.ndarray: # equality constraints\n",
+    "            return x[1] - x[0] + c1\n",
+    "\n",
+    "        def ineq_constraint(x:np.ndarray) -> np.ndarray: # inequality constraints\n",
+    "            return x[1] + x[0] + c2\n",
+    "\n",
+    "        xmin = -3 \n",
+    "        xmax = 3\n",
+    "        ymin = -3\n",
+    "        ymax = 3\n",
+    "        N = 100\n",
+    "\n",
+    "        # Equality\n",
+    "        yeq_plot = []\n",
+    "        xeq_plot = []\n",
+    "        for y in list(np.linspace(-3,3,N)):\n",
+    "            x = y + c1 # change this\n",
+    "            if x <= xmax and x >= xmin:\n",
+    "                xeq_plot.append(x)\n",
+    "                yeq_plot.append(y)\n",
+    "        yeq_plot = np.array(yeq_plot)\n",
+    "        xeq_plot = np.array(xeq_plot)\n",
+    "\n",
+    "        yeq_plot_list.append(yeq_plot)\n",
+    "        xeq_plot_list.append(xeq_plot)\n",
+    "\n",
+    "        # Inequality\n",
+    "        yineq_plot = []\n",
+    "        xineq_plot = []\n",
+    "        for y in list(np.linspace(-3,3,N)):\n",
+    "            x = - y - c2 # change this\n",
+    "            if x <= xmax and x >= xmin:\n",
+    "                xineq_plot.append(x)\n",
+    "                yineq_plot.append(y)\n",
+    "        yineq_plot = np.array(yineq_plot)\n",
+    "        xineq_plot = np.array(xineq_plot)\n",
+    "\n",
+    "        yineq_plot_list.append(yineq_plot)\n",
+    "        xineq_plot_list.append(xineq_plot)\n",
+    "    \n",
+    "    if np.isnan(c1):\n",
+    "        eqcs = []\n",
+    "    else:\n",
+    "        eqcs = [eq_constraint]\n",
+    "        \n",
+    "    if np.isnan(c2):\n",
+    "        ineqcs = []\n",
+    "    else:\n",
+    "        ineqcs = [ineq_constraint]\n",
+    "    \n",
+    "    tr = TrustRegionSQPFilter(constants = constants, \n",
     "                          dataset = dataset, \n",
     "                          cf = cf, \n",
-    "                          eqcs = [eq_constraint], \n",
-    "                          ineqcs = [ineq_constraint])\n",
+    "                          eqcs = eqcs, \n",
+    "                          ineqcs = ineqcs)\n",
     "\n",
-    "tr.run(max_iter=25)"
+    "    tr.run(max_iter=35)\n",
+    "    \n",
+    "    tr_dict['name'] = name\n",
+    "    tr_dict['tr'] = tr\n",
+    "    tr_dict['cf'] = cf\n",
+    "    tr_dict['plot'] = [xeq_plot_list, \n",
+    "                       yeq_plot_list,\n",
+    "                       xineq_plot_list,\n",
+    "                       yineq_plot_list]\n",
+    "    tr_list.append(tr_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6a04655",
+   "metadata": {},
+   "source": [
+    "# Make table of results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9b3a127",
+   "id": "772d991d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%debug"
+    "for tr in tr_list:\n",
+    "    print(tr['name'], '&',\n",
+    "          tr['tr'].iterates[-1]['iteration_no'],  '&',\n",
+    "          tr['tr'].iterates[-1]['number_of_function_calls'],  '&',\n",
+    "          tr['tr'].termination_status, '&',\n",
+    "          \"{:.2e}\".format(tr['tr'].iterates[-1]['y_curr'][0]), '&',\n",
+    "          \"{:.2e}\".format(tr['tr'].iterates[-1]['y_curr'][1]), '&',\n",
+    "          \"{:.2e}\".format(tr['tr'].iterates[-1]['v'][0]),  '&',\n",
+    "          \"{:.2e}\".format(tr['tr'].iterates[-1]['fY'][0]), '\\\\\\\\')"
    ]
   },
   {
@@ -99,57 +232,129 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import LogNorm\n",
+    "from matplotlib import ticker, cm\n",
+    "\n",
+    "ind = 15\n",
+    "tr = tr_list[ind]\n",
+    "xeq_plot = tr['plot'][0][0] #xeq_plot_list[ind]\n",
+    "yeq_plot = tr['plot'][1][0] #yeq_plot_list[ind]\n",
+    "xineq_plot = tr['plot'][2][0] #xineq_plot_list[ind]\n",
+    "yineq_plot = tr['plot'][3][0] #yineq_plot_list[ind]\n",
+    "\n",
     "X, Y = np.meshgrid(np.linspace(-3, 3, 100),\n",
     "                    np.linspace(-3, 3, 100))\n",
-    "levels = [0.0001, 0.0005, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50]\n",
+    "# levels = [0.0001, 0.0005, 0.001, 0.005, 0.01, 0.05, 0.1, 0.5, 1, 5, 10, 50]\n",
+    "levels = [10**i for i in np.arange(-1,2.5,0.2)]\n",
     "\n",
-    "for i in range(len(tr.iterates)):\n",
+    "fsize = 15\n",
+    "tsize = 18\n",
+    "tdir = 'in'\n",
+    "major = 5.0\n",
+    "minor = 3.0\n",
+    "\n",
+    "style = 'default'\n",
+    "\n",
+    "plt.style.use(style)\n",
+    "plt.rcParams['text.usetex'] = True\n",
+    "plt.rcParams['font.size'] = fsize\n",
+    "plt.rcParams['legend.fontsize'] = tsize\n",
+    "plt.rcParams['xtick.direction'] = tdir\n",
+    "plt.rcParams['ytick.direction'] = tdir\n",
+    "plt.rcParams['xtick.major.size'] = major\n",
+    "plt.rcParams['xtick.minor.size'] = minor\n",
+    "plt.rcParams['ytick.major.size'] = major\n",
+    "plt.rcParams['ytick.minor.size'] = minor\n",
+    "\n",
+    "for i in range(len(tr['tr'].iterates)):\n",
+    "    if i % 3 == 0:\n",
+    "        center = tr['tr'].iterates[i]['y_curr']\n",
+    "        radius = tr['tr'].iterates[i]['radius']\n",
+    "        intx = X - center[0]\n",
+    "        inty = Y - center[1]\n",
+    "        dist = np.sqrt(intx**2 + inty**2)\n",
+    "        intindices = dist <= radius\n",
+    "\n",
+    "        func = tr['cf']([X, Y])\n",
+    "\n",
+    "        func_map = tr['tr'].iterates[i]['models'].m_cf.model.model_polynomial.feval.map(X.shape[0]*X.shape[1])\n",
+    "        x_dm = ca.DM(X).reshape((1, X.shape[0]*X.shape[1]))\n",
+    "        y_dm = ca.DM(Y).reshape((1, X.shape[0]*X.shape[1]))\n",
+    "        func_dm = func_map(ca.vertcat(x_dm, y_dm))\n",
+    "        func_dm = func_dm.reshape((X.shape[0], X.shape[1])).full()\n",
+    "        func[intindices] = func_dm[intindices]\n",
+    "\n",
+    "        circle1 = plt.Circle(center, radius, color='black', fill=False)\n",
+    "\n",
+    "        fig, ax = plt.subplots(1)\n",
+    "        ax.add_patch(circle1)\n",
+    "        CS = ax.contour(X, Y, func, levels, norm = LogNorm(), cmap=cm.PuBu_r)\n",
+    "        ax.clabel(CS, fontsize=9, inline=True)\n",
+    "        x = tr['tr'].iterates[i]['Y'][0,:]\n",
+    "        y = tr['tr'].iterates[i]['Y'][1,:]\n",
+    "        plt.scatter(x, y, color='black', label=f\"iteration {i}\")\n",
+    "        plt.scatter(x[0], y[0], color='red', label=f'Best point')\n",
+    "\n",
+    "        #Eq constraint    \n",
+    "        plt.plot(xeq_plot, yeq_plot, 'b-', label=f\"eq constraint\")\n",
+    "\n",
+    "        #Ineq constraint\n",
+    "        plt.plot(xineq_plot, yineq_plot, 'r--', label=f\"ineq constraint\")\n",
+    "\n",
+    "        plt.legend()\n",
     "    \n",
-    "    center = tr.iterates[i]['y_curr']\n",
-    "    radius = tr.iterates[i]['radius']\n",
-    "    intx = X - center[0]\n",
-    "    inty = Y - center[1]\n",
-    "    dist = np.sqrt(intx**2 + inty**2)\n",
-    "    intindices = dist <= radius\n",
-    "        \n",
-    "    func = cf([X, Y])\n",
-    "    \n",
-    "    func_map = tr.iterates[i]['models'].m_cf.model.model_polynomial.feval.map(X.shape[0]*X.shape[1])\n",
-    "    x_dm = ca.DM(X).reshape((1, X.shape[0]*X.shape[1]))\n",
-    "    y_dm = ca.DM(Y).reshape((1, X.shape[0]*X.shape[1]))\n",
-    "    # print(func_map, vertcat(x_dm, y_dm).shape)\n",
-    "    func_dm = func_map(ca.vertcat(x_dm, y_dm))\n",
-    "    func_dm = func_dm.reshape((X.shape[0], X.shape[1])).full()\n",
-    "    func[intindices] = func_dm[intindices]\n",
-    "        \n",
-    "    circle1 = plt.Circle(center, radius, color='black', fill=False)\n",
-    "    \n",
-    "    fig, ax = plt.subplots(1)\n",
-    "    ax.add_patch(circle1)\n",
-    "    ax.contour(X, Y, func, levels, norm = LogNorm())\n",
-    "    x = tr.iterates[i]['Y'][0,:]\n",
-    "    y = tr.iterates[i]['Y'][1,:]\n",
-    "    plt.scatter(x, y, label=f\"iteration {i}\")\n",
-    "    plt.scatter(x[0], y[0], label=f'Best point')\n",
-    "    plt.plot([-3,3], [-3,3], 'b-', label=f\"eq constraint\")\n",
-    "    plt.plot([-3,3], [5,-1], 'r--', label=f\"ineq constraint\")\n",
-    "    plt.legend()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5a72bf",
-   "metadata": {},
+   "id": "fd63ee2c",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "x = [i[0] for i in tr.filter_SQP.filters]\n",
-    "y = [i[1] for i in tr.filter_SQP.filters]\n",
-    "plt.figure()\n",
-    "plt.scatter(x, y)\n",
-    "plt.ylabel(\"vartheta_k\")\n",
-    "plt.xlabel(\"f_k\")"
+    "# Iteration vs OF\n",
+    "# print(tr_list)\n",
+    "for inds, name in [([0,1,2], 'PQ-E'), \n",
+    "                   ([3,4,5], 'PQ-I'), \n",
+    "                   ([6,7,8], 'PQ-IE'), \n",
+    "                   ([9,10,11], 'PQ-IE-N'), \n",
+    "                   ([12,13,14], 'RB-E'), \n",
+    "                   ([15,16,17], 'RB-I'), \n",
+    "                   ([18,19,20], 'RB-IE'), \n",
+    "                   ([21,22,23], 'RB-IE-N')]:\n",
+    "    \n",
+    "    _tr_list = [tr_list[i] for i in inds]\n",
+    "    \n",
+    "    fig, ax = plt.subplots(1)\n",
+    "    for j, tr in enumerate(_tr_list):\n",
+    "        OF_list = [i['fY'][0] for i in tr['tr'].iterates]\n",
+    "        n_iter = [i['number_of_function_calls'] for i in tr['tr'].iterates] \n",
+    "        ax.plot(n_iter, OF_list, label=f\"{tr['name']}\", linestyle='dashed')\n",
+    "    try:\n",
+    "        ax.set_yscale(\"log\")\n",
+    "    except:\n",
+    "        ax.set_yscale(\"linear\")\n",
+    "    ax.set_xlabel(f\"Number of function evaluations\")\n",
+    "    ax.set_ylabel(f\"$f$\")\n",
+    "    ax.legend()\n",
+    "    plt.savefig(f\"./OF_{name}.png\")\n",
+    "\n",
+    "    fig, ax = plt.subplots(1)\n",
+    "    for j, tr in enumerate(_tr_list):\n",
+    "        v_list = [i['v'][0] for i in tr['tr'].iterates]\n",
+    "        n_iter = [i['number_of_function_calls'] for i in tr['tr'].iterates] \n",
+    "        ax.plot(n_iter, v_list, label=f\"{tr['name']}\", linestyle='dashed')\n",
+    "    try:\n",
+    "        ax.set_yscale(\"log\")\n",
+    "    except:\n",
+    "        ax.set_yscale(\"linear\")\n",
+    "\n",
+    "    ax.set_xlabel(f\"Number of function evaluations\")\n",
+    "    ax.set_ylabel(f\"$\\\\vartheta$\")\n",
+    "    ax.legend()\n",
+    "    plt.savefig(f\"./VL_{name}.png\")"
    ]
   }
  ],
